fix/gap_catalog_list

--- a/src/pages/catalog-page/CatalogPage.module.scss
+++ b/src/pages/catalog-page/CatalogPage.module.scss
@@ -23,7 +23,7 @@
 
 .catalogList {
     display: flex;
-    gap: 50px;
+    gap: 10px;
     flex-wrap: wrap;
     justify-content: space-between;
 }
